<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <RadioGroup
            android:id="@+id/listRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textSize="25sp"
                android:layout_marginLeft="13sp"
                android:textColor="@color/text"
                android:text="@string/radio_income" />

            <RadioButton
                android:id="@+id/radioSpending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:text="@string/radio_spending" />

            <RadioButton
                android:id="@+id/radioDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:text="@string/delete_list" />
        </RadioGroup>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="29dp"
        android:spinnerMode="dialog"
        android:textColor="@color/text"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/newListName"
        android:layout_width="250sp"
        android:layout_height="63sp"
        android:layout_gravity="center"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:hint="@string/hint_spending_list"/>

    <Button
        android:id="@+id/compAddListBtn"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/colorButton"
        android:textColor="@color/text"
        android:text="@string/add_list_btn"
        android:textSize="21dp" />

</LinearLayout>