<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".WriteFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="31sp" />

        <ImageButton
            android:id="@+id/calendarImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtonBack"
            android:src="@drawable/ic_date_range" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="33dp"
                android:text="@string/radio_income"
                android:textColor="@color/text"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radioSpending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_spending"
                android:textColor="@color/text"
                android:textSize="25sp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectSpent"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FF8800"
            android:textSize="27sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="250dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/text"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="@string/out_price"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/input_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:ems="5"
            android:hint="@string/hint_price"
            android:inputType="number"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="left"
            android:textColor="@color/text"
            android:text="@string/en"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="49dp"
            android:backgroundTint="@color/colorButton"
            android:text="@string/cancel_btn_txt"
            android:textColor="@color/text"
            android:textSize="21sp" />

        <Button
            android:id="@+id/updateData"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:backgroundTint="@color/colorButton"
            android:text="@string/update_btn_txt"
            android:textColor="@color/text"
            android:textSize="21sp" />

    </LinearLayout>

</LinearLayout>