<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".WriteFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text"
            android:textSize="31sp" />

        <ImageButton
            android:id="@+id/calendarImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8sp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtonBack"
            android:src="@drawable/ic_date_range" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="33sp"
                android:text="@string/radio_income"
                android:textColor="@color/text"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radioSpending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_spending"
                android:textColor="@color/text"
                android:textSize="25sp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectSpent"
            android:layout_width="170sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="11sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FF8800"
            android:textSize="27sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="250sp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:textColor="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="@string/out_price"
            android:textSize="26dp" />

        <EditText
            android:id="@+id/input_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:ems="5"
            android:hint="@string/hint_price"
            android:inputType="number"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="left"
            android:textColor="@color/text"
            android:text="@string/en"
            android:textSize="26dp" />

    </LinearLayout>

    <Button
        android:id="@+id/addData"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/colorButton"
        android:textColor="@color/text"
        android:text="@string/add_price_btn"
        android:textSize="21dp" />
</LinearLayout>