<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/allResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:text=""
            android:textSize="33sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="left"
            android:layout_gravity="center"
            android:textSize="21sp"
            android:textColor="@color/text"
            android:text="@string/en" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_search" />

        <TextView
            android:id="@+id/viewYear"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/text"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="left"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:text="@string/search_year_txt" />

        <TextView
            android:id="@+id/viewMonth"
            android:layout_width="25sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:text=""
            android:textColor="@color/text"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="left"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:text="@string/search_month_txt" />

        <ImageButton
            android:id="@+id/calendar_btn"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:backgroundTint="@color/colorButtonBack"
            android:layout_weight="1.3"
            android:gravity="center"
            android:src="@drawable/ic_date_range_mini" />

        <Button
            android:id="@+id/aggregate_btn"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:backgroundTint="@color/colorButton"
            android:textColor="@color/text"
            android:gravity="center"
            android:layout_weight="0.8"
            android:textSize="20sp"
            android:text="@string/aggregate_btn_txt" />


    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="13sp" />

</LinearLayout>