<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_search" />

        <TextView
            android:id="@+id/textYear"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/text"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="left"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:text="@string/search_year_txt" />

        <TextView
            android:id="@+id/textMonth"
            android:layout_width="25sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:text=""
            android:textColor="@color/text"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="left"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:text="@string/search_month_txt" />

        <ImageButton
            android:id="@+id/search_calendar_btn"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:backgroundTint="@color/colorButtonBack"
            android:layout_weight="1.3"
            android:gravity="center"
            android:src="@drawable/ic_date_range_mini" />

        <Button
            android:id="@+id/search_data_btn"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:backgroundTint="@color/colorButton"
            android:textColor="@color/text"
            android:gravity="center"
            android:layout_weight="0.8"
            android:textSize="20sp"
            android:text="@string/update_search" />


    </LinearLayout>

    <ListView
        android:id="@+id/updateListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp"/>
</LinearLayout>